@@ -43,5 +43,5 @@ rm -rf %{buildroot}
 %attr(644,root,root) /usr/share/man/man[58]/*
 
 %changelog
-* Fri Sep 30 2005 Brendan O'Dea <bod@optus.net> 2.1.9-1
+* Tue Oct 11 2005 Michael Chapman <mike.chapman@optus.net> 2.1.9-1
 - 2.1.9 release, see /usr/share/doc/l2tpns-2.1.9/Changes
